--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
           <button>see all</button>
         </div>
         <div class="info-bottom">
-          <div class="img-galeria" style="background: url(./images/desktop/image-curiosity.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-deep-earth.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-fisheye.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-from-above.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-grid.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-night-arcade.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-pocket-borealis.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-soccer-team.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-curiosity.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>curiosity</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-deep-earth.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">deep<br>earth</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-fisheye.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">make it<br>fisheye</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-from-above.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">from<br>above</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-grid.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>grid</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-night-arcade.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">night<br>arcade</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-pocket-borealis.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">pocket<br>borealis</div>
+          <div class="img-galeria" style="background: url(./images/desktop/image-soccer-team.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">soccer<br>team vr</div>
         </div>
       </div>
     </div>
