--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -56,14 +57,14 @@
           <button>see all</button>
         </div>
         <div class="info-bottom">
-          <div class="img-galeria" style="background: url(./images/desktop/image-curiosity.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>curiosity</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-deep-earth.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">deep<br>earth</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-fisheye.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">make it<br>fisheye</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-from-above.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">from<br>above</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-grid.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>grid</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-night-arcade.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">night<br>arcade</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-pocket-borealis.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">pocket<br>borealis</div>
-          <div class="img-galeria" style="background: url(./images/desktop/image-soccer-team.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">soccer<br>team vr</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-curiosity.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>curiosity</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-deep-earth.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">deep<br>earth</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-fisheye.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">make it<br>fisheye</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-from-above.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">from<br>above</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-grid.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">the<br>grid</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-night-arcade.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">night<br>arcade</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-pocket-borealis.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">pocket<br>borealis</div>
+          <div class="img-galeria" data-aos="zoom-out" style="background: url(./images/desktop/image-soccer-team.jpg);background-repeat: no-repeat;background-size: cover;background-position: center;">soccer<br>team vr</div>
         </div>
       </div>
     </div>
@@ -93,6 +94,12 @@
       </div>
     </div>
   </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
